--- a/real-age-calculator.html
+++ b/real-age-calculator.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>만 나이 계산기</title>
+    <meta name="description" content="정확한 만나이 계산기를 제공합니다. 생년월일을 입력하여 쉽고 빠르게 만나이를 계산하고, 만나이 계산 방법과 관련된 다양한 정보도 확인하세요.">
+    <title>만나이 계산기 - 정확하고 빠른 만나이 계산 방법 제공</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script>
         document.addEventListener('DOMContentLoaded', function() {
@@ -45,8 +46,10 @@
     <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full max-w-md">
         <h2 class="text-2xl font-bold mb-6 text-center">만 나이 계산</h2>
 
+        <p>만나이 계산기는 생년월일을 기준으로 현재까지의 만 나이를 계산해 주는 도구입니다. 복잡한 만나이 계산법을 몰라도 누구나 쉽고 빠르게 사용할 수 있습니다.</p>
+
         <!-- 계산 기준일 -->
-        <div class="mb-4">
+        <div class="mb-4">웹
             <label class="block text-gray-700 text-sm font-bold mb-2" for="calculationDate">
                 계산 기준일:
             </label>
