--- a/real-age-calculator.html
+++ b/real-age-calculator.html
@@ -20,9 +20,20 @@
 
             // 만 나이 계산 함수
             function calculateAge() {
-                const birthYear = parseInt(document.getElementById('birthYear').value);
-                const birthMonth = parseInt(document.getElementById('birthMonth').value);
-                const birthDay = parseInt(document.getElementById('birthDay').value);
+                let birthYear = document.getElementById('birthYear').value;
+                let birthMonth = document.getElementById('birthMonth').value;
+                let birthDay = document.getElementById('birthDay').value;
+
+                // 직접 입력 필드에서 값을 가져오는 로직 추가
+                if (birthYear === '' || birthMonth === '' || birthDay === '') {
+                    birthYear = document.getElementById('birthYearInput').value;
+                    birthMonth = document.getElementById('birthMonthInput').value;
+                    birthDay = document.getElementById('birthDayInput').value;
+                }
+
+                birthYear = parseInt(birthYear);
+                birthMonth = parseInt(birthMonth);
+                birthDay = parseInt(birthDay);
 
                 const currentYear = year;
                 const currentMonth = parseInt(month);
@@ -39,6 +50,23 @@
 
             // 계산 버튼 클릭 이벤트 리스너
             document.getElementById('calculateButton').addEventListener('click', calculateAge);
+
+            // Select box 변경 시 input field 업데이트
+            const birthYearSelect = document.getElementById('birthYear');
+            const birthMonthSelect = document.getElementById('birthMonth');
+            const birthDaySelect = document.getElementById('birthDay');
+
+            birthYearSelect.addEventListener('change', function() {
+                document.getElementById('birthYearInput').value = this.value;
+            });
+
+            birthMonthSelect.addEventListener('change', function() {
+                document.getElementById('birthMonthInput').value = this.value;
+            });
+
+            birthDaySelect.addEventListener('change', function() {
+                document.getElementById('birthDayInput').value = this.value;
+            });
         });
     </script>
 </head>
@@ -49,14 +77,14 @@
         <p>만나이 계산기는 생년월일을 기준으로 현재까지의 만 나이를 계산해 주는 도구입니다. 복잡한 만나이 계산법을 몰라도 누구나 쉽고 빠르게 사용할 수 있습니다.</p>
 
         <!-- 계산 기준일 -->
-        <div class="mb-4">웹
+        <div class="mb-4">
             <label class="block text-gray-700 text-sm font-bold mb-2" for="calculationDate">
                 계산 기준일:
             </label>
             <div class="flex items-center space-x-2">
-              <span id="currentYear"></span>년
-              <span id="currentMonth"></span>월
-              <span id="currentDay"></span>일
+                <span id="currentYear"></span>년
+                <span id="currentMonth"></span>월
+                <span id="currentDay"></span>일
             </div>
         </div>
 
@@ -66,8 +94,8 @@
                 본인 생일:
             </label>
             <div class="flex space-x-2">
-                <select id="birthYear" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
-                    <!-- 1900년부터 현재 년도까지 선택 가능 -->
+                <select id="birthYear" class="shadow appearance-none border rounded w-1/3 py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+                    <option value="">년</option>
                     <script>
                         const currentYear = new Date().getFullYear();
                         for (let i = currentYear; i >= 1900; i--) {
@@ -75,20 +103,27 @@
                         }
                     </script>
                 </select>
-                <select id="birthMonth" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+                <select id="birthMonth" class="shadow appearance-none border rounded w-1/3 py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+                    <option value="">월</option>
                     <script>
                         for (let i = 1; i <= 12; i++) {
                             document.write(`<option value="${i}">${i}월</option>`);
                         }
                     </script>
                 </select>
-                <select id="birthDay" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+                <select id="birthDay" class="shadow appearance-none border rounded w-1/3 py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+                    <option value="">일</option>
                     <script>
                         for (let i = 1; i <= 31; i++) {
                             document.write(`<option value="${i}">${i}일</option>`);
                         }
                     </script>
                 </select>
+            </div>
+            <div class="flex space-x-2 mt-2">
+                <input type="number" id="birthYearInput" placeholder="년" class="shadow appearance-none border rounded w-1/3 py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+                <input type="number" id="birthMonthInput" placeholder="월" class="shadow appearance-none border rounded w-1/3 py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+                <input type="number" id="birthDayInput" placeholder="일" class="shadow appearance-none border rounded w-1/3 py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
             </div>
             <p class="text-gray-600 text-xs italic">* 주민등록상 생년월일을 기준으로 합니다.</p>
         </div>
