--- a/real-age-calculator.html
+++ b/real-age-calculator.html
@@ -70,6 +70,15 @@
         });
     </script>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YMG06RBFS0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YMG06RBFS0');
+</script>
 <body class="bg-gray-100 flex items-center justify-center h-screen">
     <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full max-w-md">
         <h2 class="text-2xl font-bold mb-6 text-center">만 나이 계산</h2>
