--- a/real-age-calculator.html
+++ b/real-age-calculator.html
@@ -94,8 +94,8 @@
             <div class="flex items-center justify-between">
                 <a href="/" class="text-2xl font-semibold text-gray-800">인생유틸</a>
                 <ul class="flex space-x-6">
-                    <li><a href="/static-web/index.html" class="text-gray-600 hover:text-gray-800">홈</a></li>
-                    <li><a href="/static-web/real-age-calculator.html" class="text-gray-600 hover:text-gray-800">만 나이 계산기</a></li>
+                    <li><a href="/web-static/index.html" class="text-gray-600 hover:text-gray-800">홈</a></li>
+                    <li><a href="/web-static/real-age-calculator.html" class="text-gray-600 hover:text-gray-800">만 나이 계산기</a></li>
                     <!-- 추후 추가될 페이지를 위한 자리 -->
                     <li><a href="#" class="text-gray-600 hover:text-gray-800">메뉴 3</a></li>
                     <li><a href="#" class="text-gray-600 hover:text-gray-800">메뉴 4</a></li>
