--- a/real-age-calculator.html
+++ b/real-age-calculator.html
@@ -92,7 +92,7 @@
     <header class="bg-white shadow-md">
         <nav class="container py-4">
             <div class="flex items-center justify-between">
-                <a href="/" class="text-2xl font-semibold text-gray-800">인생유틸</a>
+                <a href="/web-static/index.html" class="text-2xl font-semibold text-gray-800">인생유틸</a>
                 <ul class="flex space-x-6">
                     <li><a href="/web-static/index.html" class="text-gray-600 hover:text-gray-800">홈</a></li>
                     <li><a href="/web-static/real-age-calculator.html" class="text-gray-600 hover:text-gray-800">만 나이 계산기</a></li>
