--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>나의 웹사이트</title>
+    <title>인생유틸</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
@@ -23,7 +23,7 @@
     <header class="bg-white shadow-md">
         <nav class="container py-4">
             <div class="flex items-center justify-between">
-                <a href="/" class="text-2xl font-semibold text-gray-800">나의 웹사이트</a>
+                <a href="/" class="text-2xl font-semibold text-gray-800">인생유틸</a>
                 <ul class="flex space-x-6">
                     <li><a href="/web-static/index.html" class="text-gray-600 hover:text-gray-800">홈</a></li>
                     <li><a href="/web-static/real-age-calculator.html" class="text-gray-600 hover:text-gray-800">만 나이 계산기</a></li>
@@ -47,7 +47,7 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-6">
         <div class="container text-center">
-            <p>&copy; 2024 나의 웹사이트. All rights reserved.</p>
+            <p>&copy; 2024 인생유틸. All rights reserved.</p>
             <p>
             <a href="/privacy" class="text-gray-300 hover:text-white">개인정보처리방침</a> |
             <a href="/terms" class="text-gray-300 hover:text-white">이용약관</a> |
