--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li><a href="/web-static/index.html" class="text-gray-600 hover:text-gray-800">홈</a></li>
                     <li><a href="/web-static/real-age-calculator.html" class="text-gray-600 hover:text-gray-800">만 나이 계산기</a></li>
                     <!-- 추후 추가될 페이지를 위한 자리 -->
-                    <li><a href="#" class="text-gray-600 hover:text-gray-800">메뉴 3</a></li>
+                    <li><a href="/web-static/bmi-calculator.html" class="text-gray-600 hover:text-gray-800">비만 계산기</a></li>
                     <li><a href="#" class="text-gray-600 hover:text-gray-800">메뉴 4</a></li>
                 </ul>
             </div>
