--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
         }
     </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-196WTFFRYN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-196WTFFRYN');
+</script>    
 <body class="bg-gray-100 font-sans">
 
     <!-- Header -->
