--- a/date-calculator.html
+++ b/date-calculator.html
@@ -68,7 +68,15 @@
     });
   </script>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-196WTFFRYN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-196WTFFRYN');
+</script>
 <body class="bg-gray-100 font-sans">
 
   <!-- Header -->
