--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO Meta Tags -->
+    <title>인생 유틸 : 만 나이, 비만도, 날짜 계산 - 편리하고 정확하게!</title>
+    <meta name="description" content="만 나이 계산기, 비만도 계산기, 날짜 계산기를 한 곳에서! 쉽고 빠르게 결과를 확인하고 생활에 유용한 정보를 얻으세요.">
+    <meta name="keywords" content="만 나이 계산기, 비만도 계산기, BMI 계산기, 날짜 계산기, 생년월일 계산, 나이 계산, 건강 계산기, 생활 계산기, 실생활 계산기">
+    <meta name="author" content="인생유틸">
+    <meta name="robots" content="index, follow"> <!-- 검색 엔진 로봇이 페이지를 색인하고 링크를 따라갈 수 있도록 허용 -->
+    <meta name="googlebot" content="index, follow"> <!-- Google 검색 로봇에 대한 명시적 지시 -->
+
+    <!-- Open Graph Meta Tags (Optional - for social media sharing) -->
+    <meta property="og:title" content="생활 필수 계산기: 만 나이, 비만도, 날짜 계산 - 편리하고 정확하게!">
+    <meta property="og:description" content="만 나이 계산기, 비만도 계산기, 날짜 계산기를 한 곳에서! 쉽고 빠르게 결과를 확인하고 생활에 유용한 정보를 얻으세요.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="[당신의 웹사이트 URL]">
+    <meta property="og:image" content="[당신의 웹사이트 대표 이미지 URL (권장)]">
+    <meta property="og:locale" content="ko_KR">
+
+    <!-- Twitter Card Meta Tags (Optional - for Twitter sharing) -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="생활 필수 계산기: 만 나이, 비만도, 날짜 계산 - 편리하고 정확하게!">
+    <meta name="twitter:description" content="만 나이 계산기, 비만도 계산기, 날짜 계산기를 한 곳에서! 쉽고 빠르게 결과를 확인하고 생활에 유용한 정보를 얻으세요.">
+    <meta name="twitter:image" content="[당신의 웹사이트 대표 이미지 URL (권장)]">
     <title>인생유틸</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+        integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         /* 추가적인 스타일 (선택 사항) */
         .container {
@@ -20,12 +44,15 @@
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-196WTFFRYN"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'G-196WTFFRYN');
-</script>    
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'G-196WTFFRYN');
+</script>
+
 <body class="bg-gray-100 font-sans">
 
     <!-- Header -->
@@ -35,9 +62,12 @@
                 <a href="/web-static/index.html" class="text-2xl font-semibold text-gray-800">인생유틸</a>
                 <ul class="flex space-x-6">
                     <li><a href="/web-static/index.html" class="text-gray-600 hover:text-gray-800">홈</a></li>
-                    <li><a href="/web-static/real-age-calculator.html" class="text-gray-600 hover:text-gray-800">만 나이 계산기</a></li>
-                    <li><a href="/web-static/bmi-calculator.html" class="text-gray-600 hover:text-gray-800">비만도 계산기</a></li>
-                    <li><a href="/web-static/date-calculator.html" class="text-gray-600 hover:text-gray-800">날짜 계산기</a></li>
+                    <li><a href="/web-static/real-age-calculator.html" class="text-gray-600 hover:text-gray-800">만 나이
+                            계산기</a></li>
+                    <li><a href="/web-static/bmi-calculator.html" class="text-gray-600 hover:text-gray-800">비만도 계산기</a>
+                    </li>
+                    <li><a href="/web-static/date-calculator.html" class="text-gray-600 hover:text-gray-800">날짜 계산기</a>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -45,10 +75,49 @@
 
     <!-- Content -->
     <main class="container py-12">
-        <!-- 여기에 각 페이지의 콘텐츠가 들어갑니다. -->
-        <div class="bg-white rounded-lg shadow-md p-8">
-            <h1 class="text-3xl font-semibold mb-4">Hello, World!</h1>
-            <p class="text-gray-700">환영합니다! 이 곳은 여러분의 웹사이트입니다.</p>
+        <!-- Card Grid -->
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+
+            <!-- Home Card -->
+            <a href="/web-static/index.html"
+                class="block rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300">
+                <div class="bg-white p-6">
+                    <i class="fas fa-home text-3xl text-blue-500 mb-2"></i>
+                    <h2 class="text-xl font-semibold text-gray-800 mb-2">홈</h2>
+                    <p class="text-gray-700">인생유틸의 메인 페이지입니다. 다양한 유틸리티를 만나보세요.</p>
+                </div>
+            </a>
+
+            <!-- Age Calculator Card -->
+            <a href="/web-static/real-age-calculator.html"
+                class="block rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300">
+                <div class="bg-white p-6">
+                    <i class="fas fa-birthday-cake text-3xl text-green-500 mb-2"></i>
+                    <h2 class="text-xl font-semibold text-gray-800 mb-2">만 나이 계산기</h2>
+                    <p class="text-gray-700">생년월일을 입력하여 정확한 만 나이를 계산해보세요.</p>
+                </div>
+            </a>
+
+            <!-- BMI Calculator Card -->
+            <a href="/web-static/bmi-calculator.html"
+                class="block rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300">
+                <div class="bg-white p-6">
+                    <i class="fas fa-weight-scale text-3xl text-yellow-500 mb-2"></i>
+                    <h2 class="text-xl font-semibold text-gray-800 mb-2">비만도 계산기</h2>
+                    <p class="text-gray-700">키와 몸무게를 입력하여 BMI 지수를 확인하고 건강 상태를 알아보세요.</p>
+                </div>
+            </a>
+
+            <!-- Date Calculator Card -->
+            <a href="/web-static/date-calculator.html"
+                class="block rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300">
+                <div class="bg-white p-6">
+                    <i class="far fa-calendar-alt text-3xl text-red-500 mb-2"></i>
+                    <h2 class="text-xl font-semibold text-gray-800 mb-2">날짜 계산기</h2>
+                    <p class="text-gray-700">특정 날짜로부터 며칠 후, 혹은 두 날짜 사이의 간격을 계산해보세요.</p>
+                </div>
+            </a>
+
         </div>
     </main>
 
@@ -57,12 +126,13 @@
         <div class="container text-center">
             <p>&copy; 2025 인생유틸. All rights reserved.</p>
             <p>
-            <a href="/privacy" class="text-gray-300 hover:text-white">개인정보처리방침</a> |
-            <a href="/terms" class="text-gray-300 hover:text-white">이용약관</a> |
-            <a href="/contact" class="text-gray-300 hover:text-white">문의하기</a>
+                <a href="/privacy" class="text-gray-300 hover:text-white">개인정보처리방침</a> |
+                <a href="/terms" class="text-gray-300 hover:text-white">이용약관</a> |
+                <a href="/contact" class="text-gray-300 hover:text-white">문의하기</a>
             </p>
         </div>
     </footer>
 
 </body>
+
 </html>
