--- a/bmi-calculator.html
+++ b/bmi-calculator.html
@@ -131,7 +131,7 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-6">
         <div class="container text-center">
-            <p>&copy; 2024 나의 웹사이트. All rights reserved.</p>
+            <p>&copy; 2025 인생유틸. All rights reserved.</p>
             <p>
                 <a href="/privacy" class="text-gray-300 hover:text-white">개인정보처리방침</a> |
                 <a href="/terms" class="text-gray-300 hover:text-white">이용약관</a> |
