--- a/index.html
+++ b/index.html
@@ -43,20 +43,18 @@
         }
     </style>
 </head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-196WTFFRYN"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
 
-    function gtag() {
-        dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
-    gtag('config', 'G-196WTFFRYN');
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M5TQDC8XSH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-M5TQDC8XSH');
 </script>
 
 <body class="bg-gray-100 font-sans">
-
     <!-- Header -->
     <header class="bg-white shadow-md">
         <nav class="container py-4">
