--- a/bmi-calculator.html
+++ b/bmi-calculator.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="정확한 비만도 계산기를 제공합니다. 키와 몸무게를 입력하여 쉽고 빠르게 비만도를 계산하고, 비만도 계산 방법과 관련된 다양한 정보도 확인하세요.">
     <title>비만도 계산기 - 정확하고 빠른 비만도 계산 방법 제공</title>
+    <link rel="icon" href="https://raw.githubusercontent.com/namhyonwoo/web-static/refs/heads/main/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/namhyonwoo/web-static/refs/heads/main/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
@@ -62,15 +64,14 @@
     </script>
 </head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-196WTFFRYN"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M5TQDC8XSH"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-196WTFFRYN');
+  gtag('config', 'G-M5TQDC8XSH');
 </script>
-<body class="bg-gray-100 font-sans ">
 
     <!-- Header -->
     <header class="bg-white shadow-md">
