--- a/date-calculator.html
+++ b/date-calculator.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="다양한 날짜 계산기를 제공합니다.">
   <title>날짜 계산기</title>
+  <link rel="icon" href="https://raw.githubusercontent.com/namhyonwoo/web-static/refs/heads/main/favicon.ico"
+    type="image/x-icon">
+  <link rel="shortcut icon" href="https://raw.githubusercontent.com/namhyonwoo/web-static/refs/heads/main/favicon.ico"
+    type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
@@ -25,7 +29,7 @@
   </style>
 
   <script>
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
       // Datepicker 초기화
       flatpickr("#startDate", {
         dateFormat: "Y-m-d",
@@ -69,14 +73,15 @@
   </script>
 </head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-196WTFFRYN"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M5TQDC8XSH"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-196WTFFRYN');
+  gtag('config', 'G-M5TQDC8XSH');
 </script>
+
 <body class="bg-gray-100 font-sans">
 
   <!-- Header -->
@@ -84,12 +89,12 @@
     <nav class="container py-4">
       <div class="flex items-center justify-between">
         <a href="/web-static/index.html" class="text-2xl font-semibold text-gray-800">인생유틸</a>
-          <ul class="flex space-x-6">
-              <li><a href="/web-static/index.html" class="text-gray-600 hover:text-gray-800">홈</a></li>
-              <li><a href="/web-static/real-age-calculator.html" class="text-gray-600 hover:text-gray-800">만 나이 계산기</a></li>
-              <li><a href="/web-static/bmi-calculator.html" class="text-gray-600 hover:text-gray-800">비만도 계산기</a></li>
-              <li><a href="/web-static/date-calculator.html" class="text-gray-600 hover:text-gray-800">날짜 계산기</a></li>
-          </ul>
+        <ul class="flex space-x-6">
+          <li><a href="/web-static/index.html" class="text-gray-600 hover:text-gray-800">홈</a></li>
+          <li><a href="/web-static/real-age-calculator.html" class="text-gray-600 hover:text-gray-800">만 나이 계산기</a></li>
+          <li><a href="/web-static/bmi-calculator.html" class="text-gray-600 hover:text-gray-800">비만도 계산기</a></li>
+          <li><a href="/web-static/date-calculator.html" class="text-gray-600 hover:text-gray-800">날짜 계산기</a></li>
+        </ul>
       </div>
     </nav>
   </header>
