--- a/real-age-calculator.html
+++ b/real-age-calculator.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="정확한 만나이 계산기를 제공합니다. 생년월일을 입력하여 쉽고 빠르게 만나이를 계산하고, 만나이 계산 방법과 관련된 다양한 정보도 확인하세요.">
     <title>만나이 계산기 - 정확하고 빠른 만나이 계산 방법 제공</title>
+    <link rel="icon" href="https://raw.githubusercontent.com/namhyonwoo/web-static/refs/heads/main/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/namhyonwoo/web-static/refs/heads/main/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
@@ -20,82 +22,19 @@
             padding-right: 1rem;
         }
     </style>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            // 현재 날짜를 계산 기준일로 설정
-            const today = new Date();
-            const year = today.getFullYear();
-            const month = String(today.getMonth() + 1).padStart(2, '0'); // 월은 0부터 시작하므로 +1
-            const day = String(today.getDate()).padStart(2, '0');
-
-            document.getElementById('currentYear').textContent = year;
-            document.getElementById('currentMonth').textContent = month;
-            document.getElementById('currentDay').textContent = day;
-
-            // 만 나이 계산 함수
-            function calculateAge() {
-                let birthYear = document.getElementById('birthYear').value;
-                let birthMonth = document.getElementById('birthMonth').value;
-                let birthDay = document.getElementById('birthDay').value;
-
-                // 직접 입력 필드에서 값을 가져오는 로직 추가
-                if (birthYear === '' || birthMonth === '' || birthDay === '') {
-                    birthYear = document.getElementById('birthYearInput').value;
-                    birthMonth = document.getElementById('birthMonthInput').value;
-                    birthDay = document.getElementById('birthDayInput').value;
-                }
-
-                birthYear = parseInt(birthYear);
-                birthMonth = parseInt(birthMonth);
-                birthDay = parseInt(birthDay);
-
-                const currentYear = year;
-                const currentMonth = parseInt(month);
-                const currentDay = parseInt(day);
-
-                let age = currentYear - birthYear;
-
-                if (currentMonth < birthMonth || (currentMonth === birthMonth && currentDay < birthDay)) {
-                    age--;
-                }
-
-                document.getElementById('result').textContent = `당신은 만 ${age}세 입니다.`;
-            }
-
-            // 계산 버튼 클릭 이벤트 리스너
-            document.getElementById('calculateButton').addEventListener('click', calculateAge);
-
-            // Select box 변경 시 input field 업데이트
-            const birthYearSelect = document.getElementById('birthYear');
-            const birthMonthSelect = document.getElementById('birthMonth');
-            const birthDaySelect = document.getElementById('birthDay');
-
-            birthYearSelect.addEventListener('change', function () {
-                document.getElementById('birthYearInput').value = this.value;
-            });
-
-            birthMonthSelect.addEventListener('change', function () {
-                document.getElementById('birthMonthInput').value = this.value;
-            });
-
-            birthDaySelect.addEventListener('change', function () {
-                document.getElementById('birthDayInput').value = this.value;
-            });
-        });
-    </script>
 </head>
+
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-196WTFFRYN"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M5TQDC8XSH"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-196WTFFRYN');
+  gtag('config', 'G-M5TQDC8XSH');
 </script>
-<body class="bg-gray-100 font-sans ">
 
+<body class="bg-gray-100 font-sans ">
     <!-- Header -->
     <header class="bg-white shadow-md">
         <nav class="container py-4">
@@ -201,4 +140,67 @@
 
 </body>
 
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        // 현재 날짜를 계산 기준일로 설정
+        const today = new Date();
+        const year = today.getFullYear();
+        const month = String(today.getMonth() + 1).padStart(2, '0'); // 월은 0부터 시작하므로 +1
+        const day = String(today.getDate()).padStart(2, '0');
+
+        document.getElementById('currentYear').textContent = year;
+        document.getElementById('currentMonth').textContent = month;
+        document.getElementById('currentDay').textContent = day;
+
+        // 만 나이 계산 함수
+        function calculateAge() {
+            let birthYear = document.getElementById('birthYear').value;
+            let birthMonth = document.getElementById('birthMonth').value;
+            let birthDay = document.getElementById('birthDay').value;
+
+            // 직접 입력 필드에서 값을 가져오는 로직 추가
+            if (birthYear === '' || birthMonth === '' || birthDay === '') {
+                birthYear = document.getElementById('birthYearInput').value;
+                birthMonth = document.getElementById('birthMonthInput').value;
+                birthDay = document.getElementById('birthDayInput').value;
+            }
+
+            birthYear = parseInt(birthYear);
+            birthMonth = parseInt(birthMonth);
+            birthDay = parseInt(birthDay);
+
+            const currentYear = year;
+            const currentMonth = parseInt(month);
+            const currentDay = parseInt(day);
+
+            let age = currentYear - birthYear;
+
+            if (currentMonth < birthMonth || (currentMonth === birthMonth && currentDay < birthDay)) {
+                age--;
+            }
+
+            document.getElementById('result').textContent = `당신은 만 ${age}세 입니다.`;
+        }
+
+        // 계산 버튼 클릭 이벤트 리스너
+        document.getElementById('calculateButton').addEventListener('click', calculateAge);
+
+        // Select box 변경 시 input field 업데이트
+        const birthYearSelect = document.getElementById('birthYear');
+        const birthMonthSelect = document.getElementById('birthMonth');
+        const birthDaySelect = document.getElementById('birthDay');
+
+        birthYearSelect.addEventListener('change', function () {
+            document.getElementById('birthYearInput').value = this.value;
+        });
+
+        birthMonthSelect.addEventListener('change', function () {
+            document.getElementById('birthMonthInput').value = this.value;
+        });
+
+        birthDaySelect.addEventListener('change', function () {
+            document.getElementById('birthDayInput').value = this.value;
+        });
+    }); // 만나이 계산기 스크립트 끝
+</script>
 </html>
