--- a/bmi-calculator.html
+++ b/bmi-calculator.html
@@ -4,7 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="정확한 비만도 계산기를 제공합니다. 키와 몸무게를 입력하여 쉽고 빠르게 비만도를 계산하고, 비만도 계산 방법과 관련된 다양한 정보도 확인하세요.">
+    <meta name="description" content="무료 비만도 계산기(BMI 계산기)로 나의 비만도를 정확하게 측정해보세요. 키와 몸무게만으로 간단하게 BMI 지수를 계산하고 비만 단계를 확인할 수 있습니다. WHO 기준 체질량지수 정보 제공">
+    <meta name="keywords" content="비만도 계산기, BMI 계산기, 체질량지수, 비만도 측정, 체중 계산, 표준 체중, 건강 계산기">
+    <meta name="author" content="인생유틸">
+    <meta property="og:title" content="비만도 계산기 - 정확하고 빠른 BMI 계산">
+    <meta property="og:description" content="무료 비만도 계산기(BMI 계산기)로 나의 비만도를 정확하게 측정해보세요. 키와 몸무게만으로 간단하게 BMI 지수를 계산하고 비만 단계를 확인할 수 있습니다.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://namhyonwoo.github.io/web-static/bmi-calculator.html">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://namhyonwoo.github.io/web-static/bmi-calculator.html">
     <title>비만도 계산기 - 정확하고 빠른 비만도 계산 방법 제공</title>
     <link rel="icon" href="https://raw.githubusercontent.com/namhyonwoo/web-static/refs/heads/main/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/namhyonwoo/web-static/refs/heads/main/favicon.ico" type="image/x-icon">
@@ -13,14 +21,7 @@
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
-        /* 추가적인 스타일 (선택 사항) */
-        .container {
-            max-width: 1200px;
-            margin-left: auto;
-            margin-right: auto;
-            padding-left: 1rem;
-            padding-right: 1rem;
-        }
+        .container { max-width: 1200px; margin-left: auto; margin-right: auto; padding-left: 1rem; padding-right: 1rem; }
     </style>
 
     <script>
