--- a/bmi-calculator.html
+++ b/bmi-calculator.html
@@ -10,12 +10,12 @@
     <meta property="og:title" content="비만도 계산기 - 정확하고 빠른 BMI 계산">
     <meta property="og:description" content="무료 비만도 계산기(BMI 계산기)로 나의 비만도를 정확하게 측정해보세요. 키와 몸무게만으로 간단하게 BMI 지수를 계산하고 비만 단계를 확인할 수 있습니다.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://namhyonwoo.github.io/web-static/bmi-calculator.html">
+    <meta property="og:url" content="https://namhyonwoo.github.io/bmi-calculator.html">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://namhyonwoo.github.io/web-static/bmi-calculator.html">
+    <link rel="canonical" href="https://namhyonwoo.github.io/bmi-calculator.html">
     <title>비만도 계산기 - 정확하고 빠른 비만도 계산 방법 제공</title>
-    <link rel="icon" href="https://raw.githubusercontent.com/namhyonwoo/web-static/refs/heads/main/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="https://raw.githubusercontent.com/namhyonwoo/web-static/refs/heads/main/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://raw.githubusercontent.com/namhyonwoo/refs/heads/main/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/namhyonwoo/refs/heads/main/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
@@ -78,12 +78,12 @@
     <header class="bg-white shadow-md">
         <nav class="container py-4">
             <div class="flex items-center justify-between">
-                <a href="/web-static/index.html" class="text-2xl font-semibold text-gray-800">인생유틸</a>
+                <a href="/index.html" class="text-2xl font-semibold text-gray-800">인생유틸</a>
                 <ul class="flex space-x-6">
-                    <li><a href="/web-static/index.html" class="text-gray-600 hover:text-gray-800">홈</a></li>
-                    <li><a href="/web-static/real-age-calculator.html" class="text-gray-600 hover:text-gray-800">만 나이 계산기</a></li>
-                    <li><a href="/web-static/bmi-calculator.html" class="text-gray-600 hover:text-gray-800">비만도 계산기</a></li>
-                    <li><a href="/web-static/date-calculator.html" class="text-gray-600 hover:text-gray-800">날짜 계산기</a></li>
+                    <li><a href="/index.html" class="text-gray-600 hover:text-gray-800">홈</a></li>
+                    <li><a href="/real-age-calculator.html" class="text-gray-600 hover:text-gray-800">만 나이 계산기</a></li>
+                    <li><a href="/bmi-calculator.html" class="text-gray-600 hover:text-gray-800">비만도 계산기</a></li>
+                    <li><a href="/date-calculator.html" class="text-gray-600 hover:text-gray-800">날짜 계산기</a></li>
                 </ul>
             </div>
         </nav>
