--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <meta name="twitter:description" content="만 나이 계산기, 비만도 계산기, 날짜 계산기를 한 곳에서! 쉽고 빠르게 결과를 확인하고 생활에 유용한 정보를 얻으세요.">
     <meta name="twitter:image" content="[당신의 웹사이트 대표 이미지 URL (권장)]">
     <title>인생유틸</title>
-    <link rel="icon" href="https://raw.githubusercontent.com/namhyonwoo/web-static/refs/heads/main/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="https://raw.githubusercontent.com/namhyonwoo/web-static/refs/heads/main/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://raw.githubusercontent.com/namhyonwoo/refs/heads/main/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/namhyonwoo/refs/heads/main/favicon.ico" type="image/x-icon">
     
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -59,14 +59,14 @@
     <header class="bg-white shadow-md">
         <nav class="container py-4">
             <div class="flex items-center justify-between">
-                <a href="/web-static/index.html" class="text-2xl font-semibold text-gray-800">인생유틸</a>
+                <a href="/index.html" class="text-2xl font-semibold text-gray-800">인생유틸</a>
                 <ul class="flex space-x-6">
-                    <li><a href="/web-static/index.html" class="text-gray-600 hover:text-gray-800">홈</a></li>
-                    <li><a href="/web-static/real-age-calculator.html" class="text-gray-600 hover:text-gray-800">만 나이
+                    <li><a href="/index.html" class="text-gray-600 hover:text-gray-800">홈</a></li>
+                    <li><a href="/real-age-calculator.html" class="text-gray-600 hover:text-gray-800">만 나이
                             계산기</a></li>
-                    <li><a href="/web-static/bmi-calculator.html" class="text-gray-600 hover:text-gray-800">비만도 계산기</a>
+                    <li><a href="/bmi-calculator.html" class="text-gray-600 hover:text-gray-800">비만도 계산기</a>
                     </li>
-                    <li><a href="/web-static/date-calculator.html" class="text-gray-600 hover:text-gray-800">날짜 계산기</a>
+                    <li><a href="/date-calculator.html" class="text-gray-600 hover:text-gray-800">날짜 계산기</a>
                     </li>
                 </ul>
             </div>
@@ -79,7 +79,7 @@
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
 
             <!-- Home Card -->
-            <a href="/web-static/index.html"
+            <a href="/index.html"
                 class="block rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300">
                 <div class="bg-white p-6">
                     <i class="fas fa-home text-3xl text-blue-500 mb-2"></i>
@@ -89,7 +89,7 @@
             </a>
 
             <!-- Age Calculator Card -->
-            <a href="/web-static/real-age-calculator.html"
+            <a href="/real-age-calculator.html"
                 class="block rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300">
                 <div class="bg-white p-6">
                     <i class="fas fa-birthday-cake text-3xl text-green-500 mb-2"></i>
@@ -99,7 +99,7 @@
             </a>
 
             <!-- BMI Calculator Card -->
-            <a href="/web-static/bmi-calculator.html"
+            <a href="/bmi-calculator.html"
                 class="block rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300">
                 <div class="bg-white p-6">
                     <i class="fas fa-weight-scale text-3xl text-yellow-500 mb-2"></i>
@@ -109,7 +109,7 @@
             </a>
 
             <!-- Date Calculator Card -->
-            <a href="/web-static/date-calculator.html"
+            <a href="/date-calculator.html"
                 class="block rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300">
                 <div class="bg-white p-6">
                     <i class="far fa-calendar-alt text-3xl text-red-500 mb-2"></i>
