--- a/real-age-calculator.html
+++ b/real-age-calculator.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="정확한 만나이 계산기를 제공합니다. 생년월일을 입력하여 쉽고 빠르게 만나이를 계산하고, 만나이 계산 방법과 관련된 다양한 정보도 확인하세요.">
     <title>만나이 계산기 - 정확하고 빠른 만나이 계산 방법 제공</title>
-    <link rel="icon" href="https://raw.githubusercontent.com/namhyonwoo/web-static/refs/heads/main/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="https://raw.githubusercontent.com/namhyonwoo/web-static/refs/heads/main/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://raw.githubusercontent.com/namhyonwoo/refs/heads/main/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/namhyonwoo/refs/heads/main/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
@@ -39,12 +39,12 @@
     <header class="bg-white shadow-md">
         <nav class="container py-4">
             <div class="flex items-center justify-between">
-                <a href="/web-static/index.html" class="text-2xl font-semibold text-gray-800">인생유틸</a>
+                <a href="/index.html" class="text-2xl font-semibold text-gray-800">인생유틸</a>
                 <ul class="flex space-x-6">
-                    <li><a href="/web-static/index.html" class="text-gray-600 hover:text-gray-800">홈</a></li>
-                    <li><a href="/web-static/real-age-calculator.html" class="text-gray-600 hover:text-gray-800">만 나이 계산기</a></li>
-                    <li><a href="/web-static/bmi-calculator.html" class="text-gray-600 hover:text-gray-800">비만도 계산기</a></li>
-                    <li><a href="/web-static/date-calculator.html" class="text-gray-600 hover:text-gray-800">날짜 계산기</a></li>
+                    <li><a href="/index.html" class="text-gray-600 hover:text-gray-800">홈</a></li>
+                    <li><a href="/real-age-calculator.html" class="text-gray-600 hover:text-gray-800">만 나이 계산기</a></li>
+                    <li><a href="/bmi-calculator.html" class="text-gray-600 hover:text-gray-800">비만도 계산기</a></li>
+                    <li><a href="/date-calculator.html" class="text-gray-600 hover:text-gray-800">날짜 계산기</a></li>
                 </ul>
             </div>
         </nav>
